--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="redlight">#EA0F0F</color>
     <color name="grey">#56000000</color>
     <color name="blue">#4D61CF</color>
+    <color name="green1">#67DA15</color>
 
 </resources>
