--- a/app/src/main/res/drawable/tv_bg_shape.xml
+++ b/app/src/main/res/drawable/tv_bg_shape.xml
@@ -2,8 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="2dp"
-        android:color="@color/green"/>
+        android:width="2sp"
+        android:color="@color/green"
+        >
+    </stroke>
     <corners
-        android:radius="16sp"/>
+        android:radius="80sp"
+        >
+    </corners>
+    <solid
+        android:color="@color/white"
+        >
+    </solid>
 </shape>
