--- a/app/src/main/res/layout/activity_category_wise_book.xml
+++ b/app/src/main/res/layout/activity_category_wise_book.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CategoryFragment"
+    tools:context=".CategoryWiseBookActivity"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/svCategorySearchCategory"
-        app:queryHint="Search By Category"
+        android:id="@+id/svCategoryWiseBookSearchBook"
+        app:queryHint="Search By Category,Shop,Book Category"
         app:iconifiedByDefault="false"
         android:layout_margin="16sp"
-        android:background="@drawable/tv_bg_shape"
         android:padding="8sp"
+        android:background="@drawable/tv_bg_shape"
         />
-
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvCategoryFragmentShowMultipaleCategory"
+        android:id="@+id/lvCategoryWiseListBook"
+        android:layout_margin="16sp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCategoryFragmentNoCategoryAvailable"
-        android:text="No Category Available"
+        android:id="@+id/tvCategoryWiseBookNoBookAvailable"
+        android:text="No Book Availale"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:fontFamily="sans-serif"
-        android:textColor="@color/green"
         android:textSize="16sp"
-        android:visibility="gone"
-        />
-
+        android:visibility="gone"/>
 </LinearLayout>
